--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@teachablemachine/image": "^0.8.4",
     "@tensorflow/tfjs": "^2.3.0",
     "canvas": "2.6.1",
+    "is-image-url": "^1.1.8",
     "jsdom": "16.2.1",
     "node-fetch": "^2.6.0"
   },
