--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
   "name": "@sashido/teachablemachine-node",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Simplifies integration with Teachable Machine models from Google",
-  "author": "Team SashiDo <hello@sashido.io>",
+  "author": {
+    "name": "Team SashiDo",
+    "email": "hello@sashido.io"
+  },
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "git+https://github.com/SashiDo/teachablemachine-node.git"
+  },
+  "bugs": {
+    "url": "https://github.com/SashiDo/teachablemachine-node/issues"
+  },
+  "engines": {
+    "node": ">= 10.2.1"
   },
   "keywords": [
     "tensorflow",
@@ -19,9 +28,10 @@
   "dependencies": {
     "@teachablemachine/image": "^0.8.4",
     "@tensorflow/tfjs": "^2.3.0",
+    "bigint-polyfill": "^0.1.0",
     "canvas": "2.6.1",
     "is-image-url": "^1.1.8",
-    "jsdom": "16.2.1",
+    "jsdom": "^16.4.0",
     "node-fetch": "^2.6.0"
   },
   "devDependencies": {},
