adding contributors to the package.json
I understand that any contributor that helps to improve project should be included in the contributors list under the `package.json` file.

--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  }
+  },
+  "contributors": [
+    "Yair Bonastre <bonastreyair@gmail.com> (https://github.com/bonastreyair)"
+  ]
 }
